# geo

./: README.md  Untitled.ipynb  cache.py  ccs.py  countries.py  country.py  data.py  groups.py  pyproject.toml  table.py  utils.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
cache/: countries.json
cache/backup/: ap.json  asean.json  au.json  canz.json  cplp.json  cw.json  ecowas.json  g77.json  gcc.json  ldcs.json  lldcs.json  nam.json  oecd.json  oic.json  pif.json  sadc.json  sica.json  umcs.json  un.json  zangger.json
cache/groups/: acd.json  aosis.json  au.json  caricom.json  cplp.json  eac.json  ecowas.json  eu.json  g20.json  hics.json  ldcs.json  lldcs.json  nam.json  oas.json
paises/: __init__.py  alias.py  cache.py  ccs.py  countries.py  country.py  data.py  groups.py  utils.py
paises/cache/backup/: acp.json  ag.json  aosis.json  ap.json  asean.json  au.json  canz.json  caricom.json  cegpl.json  cplp.json  cw.json  ecowas.json  eeg.json  eu.json  g20.json  g24.json  g77.json  gcc.json  ida.json  las.json  ldcs.json  lics.json  lldcs.json  lmcs.json  nam.json  nordic.json  oecd.json  oic.json  pif.json  sadc.json  sica.json  sids.json  umcs.json  un.json  weog.json  zangger.json
paises/cache/groups/: acd.json  (+45 more)
paises/groups/: ag.json  ap.json  asean.json  brics.json  g24.json  gcc.json  grulac.json  ida.json  ioc.json  mercosur.json  nato.json  oic.json  osce.json  pif.json  sadc.json  umcs.json  weog.json  zangger.json
src/paises/: countries.py  country.py
src/pypaises/: __init__.py  cache.py  countries.py  data.py
tests/: test_countries.py
(+15 files in other folders)
