[tool.poetry]
name = "geo"
version = "0.1.0"
description = ""
authors = ["Tomas <tomasgonz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
texttable = "^1.6.4"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
